added data folder for final project

--- a/data/data_cleaning.ipynb
+++ b/data/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "2  NaN     NaN       NaN                NaN  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,27 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['JBS USA, LLC'], dtype=object)"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "comps.brand_owner.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,73 +212,13 @@
        "2  1001                             Solids         G         201.0  200.0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nutrient_code.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>unit_name</th>\n",
-       "      <th>nutrient_id</th>\n",
-       "      <th>rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>259</th>\n",
-       "      <td>1258</td>\n",
-       "      <td>Fatty acids, total saturated</td>\n",
-       "      <td>G</td>\n",
-       "      <td>606</td>\n",
-       "      <td>9700.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id                          name unit_name  nutrient_id    rank\n",
-       "259  1258  Fatty acids, total saturated         G          606  9700.0"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nutrient_code[nutrient_code.name=='Fatty acids, total saturated']"
    ]
   },
   {
@@ -310,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +388,7 @@
        "[3 rows x 30 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +573,7 @@
        "[3 rows x 34 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +602,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +646,7 @@
        "Name: branded_food_category, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,14 +659,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I chose 2 food categories to dive deep into:  \n",
-    "1. 'Other Meats'\n",
-    "2. 'Frozen Poultry, Chicken & Turkey '  "
+    "Here I chose top food category to dive deep into: 'Other Meats'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,13 +673,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "112.0    1903\n",
+       "112.0    1768\n",
        "151.0     100\n",
        "113.0      80\n",
        "170.0      48\n",
@@ -772,7 +690,7 @@
        "Name: serving_size, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,21 +717,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Iron, Fe                        151\n",
-       "Cholesterol                     151\n",
-       "Protein                         151\n",
-       "Fatty acids, total saturated    151\n",
-       "Total lipid (fat)               151\n",
+       "Iron, Fe                        143\n",
+       "Protein                         143\n",
+       "Fatty acids, total saturated    143\n",
+       "Total lipid (fat)               143\n",
+       "Energy                          143\n",
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,15 +741,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "aggregate the first three nutrients for three companies"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +856,7 @@
        "4  Iron, Fe    2.41  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1003,77 +914,42 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Cholesterol</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>58.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Fatty acids, total saturated</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>5.431888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Fatty acids, total saturated</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>2.455000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>Iron, Fe</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>1.713357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Iron, Fe</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>1.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>3</th>\n",
        "      <td>Protein</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>18.905664</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Protein</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>20.540000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>4</th>\n",
        "      <td>Total lipid (fat)</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>14.029441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Total lipid (fat)</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>6.475000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           name        brand_owner     amount\n",
-       "0                   Cholesterol       JBS USA, LLC  66.909091\n",
-       "1                   Cholesterol  Tyson Foods, Inc.  58.000000\n",
-       "2  Fatty acids, total saturated       JBS USA, LLC   5.431888\n",
-       "3  Fatty acids, total saturated  Tyson Foods, Inc.   2.455000\n",
-       "4                      Iron, Fe       JBS USA, LLC   1.713357\n",
-       "5                      Iron, Fe  Tyson Foods, Inc.   1.250000\n",
-       "6                       Protein       JBS USA, LLC  18.905664\n",
-       "7                       Protein  Tyson Foods, Inc.  20.540000\n",
-       "8             Total lipid (fat)       JBS USA, LLC  14.029441\n",
-       "9             Total lipid (fat)  Tyson Foods, Inc.   6.475000"
+       "                           name   brand_owner     amount\n",
+       "0                   Cholesterol  JBS USA, LLC  66.909091\n",
+       "1  Fatty acids, total saturated  JBS USA, LLC   5.431888\n",
+       "2                      Iron, Fe  JBS USA, LLC   1.713357\n",
+       "3                       Protein  JBS USA, LLC  18.905664\n",
+       "4             Total lipid (fat)  JBS USA, LLC  14.029441"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,14 +967,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0g/njjqxd9s5_j0lwlpvmx1n_nc0000gn/T/ipykernel_23686/1090602716.py:1: DtypeWarning: Columns (2,3,4,6,9,12,17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/0g/njjqxd9s5_j0lwlpvmx1n_nc0000gn/T/ipykernel_25642/1090602716.py:1: DtypeWarning: Columns (2,3,4,6,9,12,17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  all_comps = pd.read_csv('branded_food.csv')\n"
      ]
     }
@@ -1109,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1091,7 @@
        "4             Total lipid (fat)   13.39"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,12 +1104,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Concatenate results for industry average and 2 specific comps"
+    "#### Concatenate results for industry average and JBS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1291,65 +1167,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Cholesterol</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>58.000000</td>\n",
-       "      <td>67.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Fatty acids, total saturated</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>5.431888</td>\n",
        "      <td>5.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Fatty acids, total saturated</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>2.455000</td>\n",
-       "      <td>5.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>Iron, Fe</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>1.713357</td>\n",
        "      <td>1.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Iron, Fe</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>1.250000</td>\n",
-       "      <td>1.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>3</th>\n",
        "      <td>Protein</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>18.905664</td>\n",
        "      <td>18.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Protein</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>20.540000</td>\n",
-       "      <td>18.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>4</th>\n",
        "      <td>Total lipid (fat)</td>\n",
        "      <td>JBS USA, LLC</td>\n",
        "      <td>14.029441</td>\n",
-       "      <td>13.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Total lipid (fat)</td>\n",
-       "      <td>Tyson Foods, Inc.</td>\n",
-       "      <td>6.475000</td>\n",
        "      <td>13.39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1357,20 +1198,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                  nutrient_name        brand_owner     amount  industry_avg\n",
-       "0                   Cholesterol       JBS USA, LLC  66.909091         67.00\n",
-       "1                   Cholesterol  Tyson Foods, Inc.  58.000000         67.00\n",
-       "2  Fatty acids, total saturated       JBS USA, LLC   5.431888          5.36\n",
-       "3  Fatty acids, total saturated  Tyson Foods, Inc.   2.455000          5.36\n",
-       "4                      Iron, Fe       JBS USA, LLC   1.713357          1.61\n",
-       "5                      Iron, Fe  Tyson Foods, Inc.   1.250000          1.61\n",
-       "6                       Protein       JBS USA, LLC  18.905664         18.75\n",
-       "7                       Protein  Tyson Foods, Inc.  20.540000         18.75\n",
-       "8             Total lipid (fat)       JBS USA, LLC  14.029441         13.39\n",
-       "9             Total lipid (fat)  Tyson Foods, Inc.   6.475000         13.39"
+       "                  nutrient_name   brand_owner     amount  industry_avg\n",
+       "0                   Cholesterol  JBS USA, LLC  66.909091         67.00\n",
+       "1  Fatty acids, total saturated  JBS USA, LLC   5.431888          5.36\n",
+       "2                      Iron, Fe  JBS USA, LLC   1.713357          1.61\n",
+       "3                       Protein  JBS USA, LLC  18.905664         18.75\n",
+       "4             Total lipid (fat)  JBS USA, LLC  14.029441         13.39"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
